--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="http://mc.xiaco.cn:10040/"  <!-- 这里替换为你想要跳转的网页 -->
+        window.location.href="http://xiaco.cn:10040/"  <!-- 这里替换为你想要跳转的网页 -->
     </script>
 </html>
