--- a/pixiv.html
+++ b/pixiv.html
@@ -20,7 +20,7 @@
   <h1>API调用示例</h1>
 
   <label for="num">图片数量：</label>
-  <input type="number" id="num" min="1" value="1"><br>
+  <input type="number" id="num" min="1" max="30" value="1"><br>
 
   <label for="age">年龄分级：</label>
   <select id="age">
@@ -59,6 +59,10 @@
       const apiUrl = "https://image.anosu.top/pixiv/json";
 
       const num = document.getElementById("num").value;
+      if (num > 30) {
+        alert("一次最多只能获取30张图片！");
+        return;
+      }
       const age = document.getElementById("age").value;
       const size = document.getElementById("size").value;
       const keyword = document.getElementById("keyword").value.trim();
@@ -118,6 +122,7 @@
   </script>
 <footer>
   <p>API 文档：<a href="https://docs.anosu.top/">Jitsuの随机涩图API</a></p>
+  <p>版权所有 © 2023 Jitsuの随机涩图API</p>
 </footer>
 </body>
 </html>
