--- a/pixiv.html
+++ b/pixiv.html
@@ -113,6 +113,7 @@
   <footer>
     <p>API 文档：<a href="https://docs.anosu.top/">Jitsuの随机涩图API</a></p>
     <p>版权所有 © 2023 Jitsuの随机涩图API</p>
+    <img src="https://count.himiku.com/get/@getsetu?theme=moebooru" alt="getsetu" />
   </footer>
 </body>
 </html>
