--- a/pixiv.html
+++ b/pixiv.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
+<script type="text/javascript">
+   $webfont.load("body", "4f93f415ec1d422ca7ba1f75716760af", "jdzhonyuanjian");
+   /*$webfont.load("#id1,.class1,h1", "4f93f415ec1d422ca7ba1f75716760af", "jdzhonyuanjian");*/
+   /*．．．*/
+   $webfont.draw();
+</script>
   <title>随机涩图！ By 雨月丶Amatsuki</title>
-<link rel="stylesheet" type="text/css" href="pixiv.css">
+  <link rel="stylesheet" type="text/css" href="pixiv.css">
 </head>
 <body>
   <div class="container">
