--- a/pixiv.html
+++ b/pixiv.html
@@ -3,8 +3,8 @@
 <head>
   <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
 <script type="text/javascript">
-   $webfont.load("body", "4f93f415ec1d422ca7ba1f75716760af", "jdzhonyuanjian");
-   /*$webfont.load("#id1,.class1,h1", "4f93f415ec1d422ca7ba1f75716760af", "jdzhonyuanjian");*/
+   $webfont.load("body", "cdcd91d7159344a286da55a75049b388", "SourceHanSerif-B");
+   /*$webfont.load("#id1,.class1,h1", "cdcd91d7159344a286da55a75049b388", "SourceHanSerif-B");*/
    /*．．．*/
    $webfont.draw();
 </script>
