--- a/pixiv.html
+++ b/pixiv.html
@@ -3,8 +3,8 @@
 <head>
   <script type="text/javascript" src="http://cdn.repository.webfont.com/wwwroot/js/wf/youziku.api.min.js"></script>
 <script type="text/javascript">
-   $webfont.load("body", "cdcd91d7159344a286da55a75049b388", "SourceHanSerif-B");
-   /*$webfont.load("#id1,.class1,h1", "cdcd91d7159344a286da55a75049b388", "SourceHanSerif-B");*/
+   $webfont.load("body", "3d90b0e722c349d7b29509f19761f7a7", "SansGBW3");
+   /*$webfont.load("#id1,.class1,h1", "3d90b0e722c349d7b29509f19761f7a7", "SansGBW3");*/
    /*．．．*/
    $webfont.draw();
 </script>
