--- a/tech/tech.html
+++ b/tech/tech.html
@@ -193,7 +193,7 @@
             <p>请确保输入的是<strong><span style="color:red;">二维码字符</span></strong>（以<strong><span style="color:red;">SGWCMAID</span></strong>为开头的字符串）。而不是二维码图片链接和登录链接。</p>
             <p>当显示"Your QrCode is invald."或"Unable to operate. Please refresh QrCode."，请重新获取二维码。</p>
             <p>如果操作失败，会提示"Unable to operate. Probably User has logged in."（无法完成操作，账号可能在登入状态中），账号将保持登录状态，则需要等待15分钟后才可操作。（又或是你现在在上机游玩中，无法完成该操作，请下机后再试。）</p>
-            <p>成功完成操作后，会在账号内留下一个白潘91%的记录。</p>
+            <p>成功完成操作后，会上传一条「PANDORA PANDOXXX」Re:Master 铺面的游玩记录，但是不会覆盖原有成绩。</p>
         </div>
 
         <div class="section">
