--- a/tech/deluxscore.html
+++ b/tech/deluxscore.html
@@ -80,6 +80,7 @@
 </head>
 <body>
     <div class="calculator">
+        <img src="logos/logo2.png" alt="Logo" class="logo" width="100" height="100">
         <h2>DX分数计算器</h2>
         <div class="input-group">
             <label for="baseValue">请输入总Note数:</label>
@@ -104,7 +105,7 @@
             <p>计算结果将显示在这里</p>
         </div>
 
-        <p style="text-align:center">Presented by YuYue-Amatsuki.</p>
+        <p style="text-align:center">Presented by YuYue-Amatsuki</p>
     </div>
 
     <script>
@@ -140,12 +141,15 @@
             // 计算结果并取整
             const result = Math.round(baseValue * 3 * randomPercentage);
 
+            const maxdeluxscore = baseValue * 3;
+
             // 显示结果
             const resultElement = document.getElementById('result');
             resultElement.innerHTML = `
-                <p>使用百分比：${(randomPercentage * 100).toFixed(2)}%</p>
+                <p>使用随机百分比：${(randomPercentage * 100).toFixed(2)}%</p>
                 <p>计算公式：${baseValue} × 3 × ${randomPercentage}</p>
                 <h3>最终结果：${result}</h3>
+                <h3>DX分数理论值：${maxdeluxscore}</h3>
             `;
         }
     </script>
